--- a/package.json
+++ b/package.json
@@ -35,29 +35,35 @@
     "prisma:db:reset": "prisma migrate reset"
   },
   "dependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
     "@nestjs/common": "^10.0.0",
+    "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
-    "@nestjs/platform-express": "^10.0.0",
-    "@swc/cli": "^0.3.14",
-    "@swc/core": "^1.6.5",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.7",
+    "@nestjs/platform-fastify": "^10.3.9",
+    "@prisma/client": "^5.16.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.1",
     "oxlint": "^0.5.0",
     "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@swc/cli": "^0.3.14",
+    "@swc/core": "^1.6.5",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
+    "husky": "^9.0.11",
     "jest": "^29.5.0",
+    "lint-staged": "^15.2.7",
     "prettier": "^3.0.0",
+    "prisma": "^5.16.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
