--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,12 @@
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": true,
-    // "noImplicitAny": true,
+    "noImplicitAny": true,
     "strictBindCallApply": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+    "paths": {
+      "@/*": ["src/*"]
+    }
   }
 }
