feat: implement Notification module

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,7 @@ DATABASE_USER="ramdonuser"
 DATABASE_PASSWORD="randompassword"
 DATABASE_NAME="ramdondb"
 DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${DATABASE_NAME}?schema=public"
+
+TWILIO_ACCOUNT_SID=""
+TWILIO_AUTH_TOKEN=""
+TWILIO_PHONE_NUMBER=""
