feat: implement rabbitmq

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,7 @@ DATABASE_URL="postgresql://${DATABASE_USER}:${DATABASE_PASSWORD}@${DATABASE_HOST
 TWILIO_ACCOUNT_SID=""
 TWILIO_AUTH_TOKEN=""
 TWILIO_PHONE_NUMBER=""
+
+RABBITMQ_USER="ramdonuser"
+RABBITMQ_PASSWORD="randompassword"
+RABBITMQ_HOST="rabbitmq"
