--- a/package.json
+++ b/package.json
@@ -36,11 +36,15 @@
     "prisma:db:reset": "prisma migrate reset"
   },
   "dependencies": {
+    "@golevelup/nestjs-rabbitmq": "^5.3.0",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.2.2",
     "@nestjs/core": "^10.0.0",
+    "@nestjs/microservices": "^10.3.9",
     "@nestjs/platform-fastify": "^10.3.9",
     "@prisma/client": "^5.16.1",
+    "amqp-connection-manager": "^4.1.14",
+    "amqplib": "^0.10.4",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "oxlint": "^0.5.0",
